CMake Doc: - added proper error message if doxygen is not found - VADoc target is now put into Documentation folder - Documentation is no longer installed but still copied to VAWebsite

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required( VERSION 2.9 )
+cmake_minimum_required (VERSION 3.14 FATAL_ERROR)
 
-list( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )
+find_package( Doxygen )
+if ( NOT DOXYGEN_FOUND )
+	message( FATAL_ERROR "VA documentation requires Doxygen which could not be found. Did you install it?" )
+endif()
 
-project( VADoc )
-
-find_package( doxygen REQUIRED )
-
+#TODO: Does not work if called from ITASuite
 configure_file( doxyfile.in doxyfile @ONLY )
 configure_file( doxygen.footer.html.in doxygen.footer.html @ONLY )
 
@@ -14,9 +14,10 @@ add_custom_target( VADoc "${DOXYGEN_EXECUTABLE}" doxyfile
 	COMMENT "Generating VA C++ API documentation with Doxygen" VERBATIM
 	)
 
-set_property( TARGET VADoc PROPERTY FOLDER "VA" )
+set_property( TARGET VADoc PROPERTY FOLDER "Documentation" )
 
-install( DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/html" DESTINATION "share/doc" )
+#Not required to install documentation since it is put on our website
+#install( DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/html" DESTINATION "share/doc" )
 
 if( VAWEBSITE_FOUND )
 	if( WIN32 )
