VADoc: Source files for Doxygen are now set relatively to VADoc directory

--- a/doc/doxyfile.in
+++ b/doc/doxyfile.in
@@ -111,21 +111,21 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # Configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = @CMAKE_SOURCE_DIR@/VABase/include \
-						 @CMAKE_SOURCE_DIR@/VABase/src \
-						 @CMAKE_SOURCE_DIR@/VANet/include \
-						 @CMAKE_SOURCE_DIR@/VANet/src \
-						 @CMAKE_SOURCE_DIR@/VACore/include \
-						 #@CMAKE_SOURCE_DIR@/VACore/src \
-						 #@CMAKE_SOURCE_DIR@/VACS/include \
-						 #@CMAKE_SOURCE_DIR@/VALua/src \
-						 #@CMAKE_SOURCE_DIR@/VALua/include \
-						 #@CMAKE_SOURCE_DIR@/VAMatlab/src \
-						 #@CMAKE_SOURCE_DIR@/VAMatlab/include \
-						 #@CMAKE_SOURCE_DIR@/VAPython/src \
-						 #@CMAKE_SOURCE_DIR@/VAPython/include \
-						 #@CMAKE_SOURCE_DIR@/VAServer\
-						 #@CMAKE_SOURCE_DIR@/VAUnity 
+INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/../VABase/include \
+						 @CMAKE_CURRENT_SOURCE_DIR@/../VABase/src \
+						 @CMAKE_CURRENT_SOURCE_DIR@/../VANet/include \
+						 @CMAKE_CURRENT_SOURCE_DIR@/../VANet/src \
+						 @CMAKE_CURRENT_SOURCE_DIR@/../VACore/include \
+						 #@CMAKE_CURRENT_SOURCE_DIR@/../VACore/src \
+						 #@CMAKE_CURRENT_SOURCE_DIR@/../VACS/include \
+						 #@CMAKE_CURRENT_SOURCE_DIR@/../VALua/src \
+						 #@CMAKE_CURRENT_SOURCE_DIR@/../VALua/include \
+						 #@CMAKE_CURRENT_SOURCE_DIR@/../VAMatlab/src \
+						 #@CMAKE_CURRENT_SOURCE_DIR@/../VAMatlab/include \
+						 #@CMAKE_CURRENT_SOURCE_DIR@/../VAPython/src \
+						 #@CMAKE_CURRENT_SOURCE_DIR@/../VAPython/include \
+						 #@CMAKE_CURRENT_SOURCE_DIR@/../VAServer\
+						 #@CMAKE_CURRENT_SOURCE_DIR@/../VAUnity 
 INPUT_ENCODING         = UTF-8
 FILE_PATTERNS          = *.c \
                          *.cc \
