Make install folder for VAUnity match VAMatlab etc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,14 +168,14 @@ endif ()
 if (ITA_VA_WITH_UNITY_SCRIPTS)
 	install (
 		DIRECTORY "VAUnity"
-		DESTINATION "unity"
+		DESTINATION "VAUnity_v${PROJECT_VERSION_MAJOR}${VA_RELEASE_LETTER}"
 		COMPONENT ${PROJECT_NAME}
 	)
 endif ()
 if (ITA_VA_WITH_UNITY_EXTENSIONS_SCRIPTS)
 	install (
 		DIRECTORY "VAUnityExtensions"
-		DESTINATION "unity"
+		DESTINATION "VAUnityExtensions_v${PROJECT_VERSION_MAJOR}${VA_RELEASE_LETTER}"
 		COMPONENT ${PROJECT_NAME}
 	)
 endif ()
